--- a/package.json
+++ b/package.json
@@ -14,25 +14,37 @@
   "scripts": {
     "lint": "eslint src/ test/",
     "build": "babel -d lib/ src/",
+    "build:webpack": "webpack",
     "pretest": "npm run lint",
     "test": "ava",
-    "watch": "onchange src/ -- npm run build && echo Done",
-    "dev": "npm run watch",
+    "dev": "parallelshell \"deepstream start -c ./ds-conf/config.yml\" \"nodemon .\" \"npm run build -- -w\" \"webpack-dev-server --content-base public/\"",
     "prepublish": "npm run test && npm run build"
   },
   "devDependencies": {
     "ava": "^0.16.0",
     "babel-cli": "^6.16.0",
     "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.16.3",
+    "css-loader": "^0.25.0",
     "eslint": "^3.8.0",
     "eslint-config-kellyirc": "^3.1.0",
-    "onchange": "^3.0.2"
+    "eslint-plugin-react": "^6.4.1",
+    "extract-loader": "0.0.2",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "babel-runtime": "^6.11.6"
+    "babel-runtime": "^6.11.6",
+    "deepstream.io": "^1.1.1",
+    "deepstream.io-client-js": "^1.1.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
