--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:webpack": "webpack",
     "pretest": "npm run lint",
     "test": "ava",
-    "dev": "parallelshell \"deepstream start -c ./ds-conf/config.yml\" \"nodemon .\" \"npm run build -- -w\" \"webpack-dev-server --content-base public/\"",
+    "dev": "parallelshell \"deepstream start -c ./ds-conf/config.yml\" \"nodemon -w lib/ -i lib/web/ .\" \"npm run build -- -w\" \"webpack-dev-server --content-base public/\"",
     "prepublish": "npm run test && npm run build"
   },
   "devDependencies": {
@@ -44,7 +44,13 @@
     "babel-runtime": "^6.11.6",
     "deepstream.io": "^1.1.1",
     "deepstream.io-client-js": "^1.1.1",
+    "load-json-file": "^2.0.0",
+    "ramda": "^0.22.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "rxjs": "^5.0.0-rc.1",
+    "squelch-client": "^0.19.0",
+    "string-hash": "^1.1.0",
+    "tachyons": "^4.5.4"
   }
 }
