--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "squelch-client": "^0.19.0",
     "string-hash": "^1.1.0",
     "tachyons": "^4.5.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/raymond-h/brief-irc"
   }
 }
